<resources>
    <string name="app_name">Logic Game</string>
    <string name="textView">Conjunction (AND)</string>
    <string name="textView9">A</string>
    <string name="textView10">B</string>
    <string name="textView12">T</string>
    <string name="textView13">T</string>
    <string name="textView14">T</string>
    <string name="textView15">F</string>
    <string name="textView16">F</string>
    <string name="textView17">T</string>
    <string name="textView18">F</string>
    <string name="textView19">F</string>
    <string name="textView20">A ^ B</string>
    <string name="button">SUBMIT</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Wrong, try again!</string>
</resources>
