<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogicGameActivity">

    <TextView
            android:gravity="center"
            android:text="@string/textView"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:id="@+id/textView" android:textSize="30sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp" android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp" app:layout_constraintHorizontal_bias="0.0"
    />
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="470dp"
            android:id="@+id/tableLayout2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow android:layout_width="wrap_content" android:layout_height="match_parent" android:minHeight="100dp">
            <TextView
                    android:gravity="center"
                    android:layout_width="125dp"
                    android:id="@+id/textView9" android:text="@string/textView9"
                    android:textSize="24sp" android:textStyle="bold" android:layout_height="match_parent"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="125dp"
                    android:id="@+id/textView10" android:text="@string/textView10"
                    android:textStyle="bold"
                    android:textSize="24sp" android:layout_height="match_parent"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="125dp"
                    android:layout_height="match_parent" android:id="@+id/textView20"
                    android:text="@string/textView20" android:textStyle="bold" android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="match_parent" android:minHeight="100dp">
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView12"
                    android:text="@string/textView12" android:textSize="24sp"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView13"
                    android:text="@string/textView13" android:textSize="24sp"/>
            <EditText
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editText3" android:textSize="24sp" android:inputType="textCapCharacters"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="match_parent" android:minHeight="100dp">
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView14"
                    android:text="@string/textView14" android:textSize="24sp"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView15"
                    android:text="@string/textView15" android:textSize="24sp"/>
            <EditText
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editText4" android:textSize="24sp" android:inputType="textCapCharacters"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="match_parent" android:minHeight="100dp">
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView16"
                    android:text="@string/textView16" android:textSize="24sp"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView17"
                    android:text="@string/textView17" android:textSize="24sp"/>
            <EditText
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editText5" android:textSize="24sp" android:inputType="textCapCharacters"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="200px">
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView18"
                    android:text="@string/textView18" android:textSize="24sp"/>
            <TextView
                    android:gravity="center"
                    android:text="@string/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView19" android:textSize="24sp"/>
            <EditText
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editText6" android:textSize="24sp" android:inputType="textCapCharacters"/>
        </TableRow>
    </TableLayout>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="560dp" app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>